--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/txtProjeto3R"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/projeto3r"
+        android:text="Projeto 3R"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
